--- a/www/css/index.css
+++ b/www/css/index.css
@@ -24,8 +24,8 @@ body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#E4E4E4;
-    background-image:linear-gradient(top, #ADD8E6 0%, #ADD8E6 51%);
+    background-color:#ADD8E4;
+    background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
     background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
     background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
     background-image:-webkit-gradient(
@@ -37,9 +37,9 @@ body {
     );
     background-attachment:fixed;
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
-    font-size:30px;
+    font-size:12px;
     height:100%;
-    margin:10px;
+    margin:0px;
     padding:0px;
     text-transform:uppercase;
     width:100%;
@@ -50,9 +50,9 @@ body {
     background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
     position:absolute;             /* position in the center of the screen */
     left:50%;
-    top:40%;
-    height:250px;                   /* text area height */
-    width:425px;                   /* text area width */
+    top:50%;
+    height:50px;                   /* text area height */
+    width:225px;                   /* text area width */
     text-align:center;
     padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
     margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
@@ -70,12 +70,13 @@ body {
 }
 
 h1 {
-    font-size:48px;
+    font-size:80px;
     font-weight:normal;
     margin:0px;
     overflow:visible;
     padding:0px;
     text-align:center;
+	position:absolute;
 }
 
 .event {
