--- a/www/css/index.css
+++ b/www/css/index.css
@@ -24,7 +24,7 @@ body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#ADD8E4;
+    background-color:#FFFFFF;
     background-image:linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
     background-image:-webkit-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
     background-image:-ms-linear-gradient(top, #A7A7A7 0%, #E4E4E4 51%);
@@ -48,12 +48,14 @@ body {
 /* Portrait layout (default) */
 .app {
     background:url(../img/logo.png) no-repeat center top; /* 170px x 200px */
-    position:absolute;             /* position in the center of the screen */
-    left:50%;
-    top:25%;
+    display:block;
+	margin-left:auto;
+	margin-right:auto;
+	width:50%;
+	position:absolute;             /* position in the center of the screen */
     height:741px;                   /* text area height */
     width:634px;                   /* text area width */
-    text-align:center;
+    text-align:bottom;
     padding:180px 0px 0px 0px;     /* image height is 200px (bottom 20px are overlapped with text) */
     margin:-115px 0px 0px -112px;  /* offset vertical: half of image height and text area height */
                                    /* offset horizontal: half of text area width */
@@ -71,22 +73,24 @@ body {
 
 h1 {
     font-size:80px;
-    font-weight:normal;
+    font-weight:bold;
+	color:blue;
     margin:0px;
     overflow:visible;
     padding:0px;
     text-align:center;
 	position:absolute;
 	top:75%;
+	text-shadow: 3px 2px black;
 }
 
 .event {
-    border-radius:4px;
-    -webkit-border-radius:4px;
-    color:#FFFFFF;
-    font-size:12px;
-    margin:0px 30px;
-    padding:2px 0px;
+    border-radius:20px;
+    -webkit-border-radius:30px;
+    color:green;
+    font-size:48px;
+    margin:0px 150px;
+    padding:50px 0px;
 }
 
 .event.listening {
